--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <title>SHOPPICALANGULARADMINWEB</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="/assets/images/logo2.svg">
+  <link rel="icon" type="image/x-icon" href="assets/images/logo2.svg">
 </head>
 
 <body>
